--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,38 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Podcast</title>
   </head>
-  <body>
+  <body className="dark">
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root">
+      <script>
+        ;(function () {
+          window.__onThemeChange = function () {}
+          function setTheme(newTheme) {
+            window.__theme = newTheme
+            preferredTheme = newTheme
+            document.body.className = newTheme
+            window.__onThemeChange(newTheme)
+          }
+          var preferredTheme
+          try {
+            preferredTheme = localStorage.getItem('theme')
+          } catch (err) {}
+          window.__setPreferredTheme = function (newTheme) {
+            setTheme(newTheme)
+            try {
+              localStorage.setItem('theme', newTheme)
+            } catch (err) {}
+          }
+          setTheme(preferredTheme || 'dark')
+        })()
+      </script>
+    </div>
   </body>
 </html>
